--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <section>
     <h2>About Me</h2>
-    <img src="narendranathreddy333.github.io/grad pic.jpeg" alt="Profile Photo" style="width:150px;height:150px;border-radius:50%;">
-    <p>Welcome to my Portfolio! I am a Data Engineer and a graduate student pursuing a Master's degree in Data Science at the University of North Texas, with a GPA of 3.83. I specialize in machine learning, data analysis, and full-stack development.</p>
+    <img src="https://github.com/narendranathreddy333/narendranathreddy333.github.io/blob/ef897ab82e8e9164a00ccf7e194a9db770bab748/grad%20pic.jpeg" alt="Profile Photo" style="width:150px;height:150px;border-radius:50%;">
+    <p>Welcome to my Portfolio! I am a Data Science Analyst and a graduate student pursuing a Master's degree in Data Science at the University of North Texas, with a GPA of 3.83. I specialize in machine learning, data analysis, and full-stack development.</p>
 </section>
